@@ -3,6 +3,8 @@ Version: 2.0.4
 Date: ????
   Changes:
     - support other mods registering additional number formats
+    - use the entity color if 'Use Colors' option is not selected
+      - entity color changes may not be reflected immediately, update the value or format signals to force a refresh
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.3
 Date: 2025-07-18
